# av-tools

./: CMakeLists.txt  README.md
av-tools/: CMakeLists.txt  MediaCapture.hpp  MediaCapture.mm  MyClass.hpp  main.cpp  my_class.hpp  myclass.hpp
av-tools.xcodeproj/: project.pbxproj
av-tools/capi/: av_streamer.cpp
av-tools/examples/: av_streamer.cpp  av_streamer.h  echo_server.cpp  echo_server.hpp  ffmpeg_helper.cpp  ffmpeg_helper.hpp  remux.cpp  remux.hpp  transcode.cpp  transcode.hpp
av-tools/ffmpeg/: avcodec.cpp  avcodec.hpp  avformat.cpp  avformat.hpp  ffmpeg_helper.cpp  ffmpeg_helper.hpp  helper.cpp  helper.hpp  swresample.cpp  swresample.hpp
av-tools/helpers/: av_streamer.cpp  ffmpeg_helper.cpp
av-tools/macos/: LiveStreamer.hpp  MediaCapture.hpp  MediaCapture.mm
av-tools/net/: listener.hpp  websocket.hpp
av-tools/speech/: speech_concept.hpp  volc_tts.cpp  volc_tts.hpp  volc_tts1.cpp  volc_tts1.hpp
av-tools/utils/: listener.hpp  rtmp_streamer.hpp  websocket.hpp
